--- a/my_project/templates/base.html
+++ b/my_project/templates/base.html
@@ -13,7 +13,7 @@
                 <li><a href="{% url 'index' %}">Главная</a></li>
                 <li><a href="{% url 'list_clients' %}">Клиенты</a></li>
                 <li><a href="{% url 'products' %}">Продукты</a></li>
-
+                <li><a href="{% url 'product_form' %}">Добавить товар</a></li>
             </ul>
         </nav>
     </header>
